@@ -329,6 +329,12 @@ static int user_main(int argc, char *argv[])
       check_test_memory_usage();
 #endif
 
+      /* Checkout task_restart() */
+
+      printf("\nuser_main: task_restart test\n");
+      restart_test();
+      check_test_memory_usage();
+
 #ifdef CONFIG_SCHED_WAITPID
       /* Check waitpid() and friends */
 
